Logic for phone number
- removing NewUser model and usage
- adding phone number to model
- adding phone mumber to landing view and sign up view

--- a/AFCU/ClientApp/src/app/landing/landing.component.html
+++ b/AFCU/ClientApp/src/app/landing/landing.component.html
@@ -15,7 +15,7 @@
 
     <div class="row mt-3">
         <div class="col-12">
-            <span>You are now logged in. Not a lot to do yet.</span>
+            <span>You are now logged in. Your phone number is {{user.phoneNumber}}.</span>
         </div>
     </div>
 
